--- a/src/Redmask.Taghelpers/wwwroot/lib/persian.css
+++ b/src/Redmask.Taghelpers/wwwroot/lib/persian.css
@@ -44,8 +44,8 @@
 }
 
 .navbar-expand .navbar-nav .nav-link {
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding-right: .5rem;
+    padding-left: .5rem;
 }
 
 [class*=icheck-] > input:first-child:checked + input[type=hidden] + label::after,
@@ -158,36 +158,31 @@ body {
 
 
 
-.bubble {
-    background-color: #fac400;
-    height: 36px;
-    width: 64px;
-    padding: 0 8px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 18px;
+
+
+.input-group > .form-control:not(:last-child), 
+.input-group > .custom-select:not(:last-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
-.dot {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: #eeeeee;
-    animation: bounce 1000ms infinite;
+.input-group:not(.has-validation) > .custom-file:not(:last-child) .custom-file-label::after, 
+.input-group:not(.has-validation) > .custom-select:not(:last-child), 
+.input-group:not(.has-validation) > .form-control:not(:last-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
-.dot:nth-of-type(2) {
-    -wekit-animation-delay: 50ms;
-    animation-delay: 50ms;
-}
-.dot:nth-of-type(3) {
-    -wekit-animation-delay: 100ms;
-    animation-delay: 100ms;
-}
-@keyframs bounce {
-     0% {transform: translateY(0);}
 
-     20% {transform: translateY(5px);}
-
-     40% {transform: translateY(0);}
- }
+.input-group > .input-group-append > .btn, 
+.input-group > .input-group-append > .input-group-text, 
+.input-group > .input-group-prepend:first-child > .btn:not(:first-child), 
+.input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child), 
+.input-group > .input-group-prepend:not(:first-child) > .btn, .input-group > .input-group-prepend:not(:first-child) > .input-group-text {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
