--- a/Web.Test/Views/Home/Index.cshtml
+++ b/Web.Test/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
 
 
                     <FloatingLabelInputGroupFor asp-for="Name" label="نام" >
-                        <input class="form-control" asp-for="Name" type="text" placeholder="Name"/>
+                        <input class="form-control" asp-for="Name" type="text" />
                         <FloatingLabelInputGroupAddOn >
                             <button class="btn btn-navbar" type="submit">
                                 <i class="las la-search"></i>
