--- a/Web.Test/Views/Home/Index.cshtml
+++ b/Web.Test/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
         <ol class="list-group list-group-numbered px-0">
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="form-check">
-                    <input class="filterInputfamilyFilter" type="checkbox" value="flexCheckDefault" id="flexCheckDefault">
+                    <input class="filterInput familyFilter" type="checkbox" data-lbl="chk_1" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
                         Default checkbox
                     </label>
@@ -62,7 +62,7 @@
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="form-check">
-                    <input class="filterInputfamilyFilter" type="checkbox" value="flexCheckChecked" id="flexCheckChecked" checked>
+                    <input class="filterInput familyFilter" type="checkbox" data-lbl="chk__2" id="flexCheckChecked">
                     <label class="form-check-label" for="flexCheckChecked">
                         Checked checkbox
                     </label>
