--- a/Web.Test/Views/Home/Index.cshtml
+++ b/Web.Test/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
 <div class="card">
     <div class="card-body">
 
-        <form asp-action="Index">
+        <form asp-action="Index" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
                 <div class="col-md-12">
