--- a/src/Redmask.Taghelpers/wwwroot/lib/main.css
+++ b/src/Redmask.Taghelpers/wwwroot/lib/main.css
@@ -56,7 +56,7 @@
 
 .nav-treeview{
     border-right: 3px solid #007bff;
-    margin-right: 19px;
+    /*margin-right: 19px;*/
 }
 .nav-treeview>li>.nav-link:not(.active){
     border-radius: 0;
