--- a/Web.Test/Views/Shared/_Layout.cshtml
+++ b/Web.Test/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 
 
 
-    @Html.RedmaskCss(new CssPool().Bootstrap4().PersianDateTimePicker().Kendo2020().AdminLTE().TagInput().PersianCss())
+    @Html.RedmaskCss(new CssPool().Bootstrap5().PersianDateTimePickerBs5().Kendo2020().AdminLTE().TagInput().PersianCss())
     @{
         var themeColor = "#0ea960";
     }
@@ -144,7 +144,7 @@
         <aside class="main-sidebar sidebar-light-primary border-left" style=" font-size: 14px;">
             <!-- Brand Logo -->
             <a href="/" class="brand-link">
-                <img src="~/lavicon.ico" alt="Logo" class="brand-image img-circle elevation-3"
+                <img src="~/favicon.ico" alt="Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
                 <span class="brand-text font-weight-light">redmask</span>
             </a>
@@ -343,7 +343,7 @@
         <script src="/_content/Redmask.Taghelpers/lib/AdminLTE-3.0.2/js/adminlte.js"></script>
         <script src="/_content/Redmask.Taghelpers/lib/kendo2020/kendo.all.min.js"></script>
         <script src="/_content/Redmask.Taghelpers/lib/tinymce5/tinymce.min.js"></script>*@
-    @Html.RedmaskJs(new ScriptsPool().Bootstrap4().PersianDateTimePicker().Kendo2020().AdminLTE().TinyMCE5().TagInput())
+    @Html.RedmaskJs(new ScriptsPool().Bootstrap5().PersianDateTimePickerBs5().Kendo2020().AdminLTE().TinyMCE5().TagInput())
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
